@@ -1,4 +1,5 @@
 Version 2025.xxxx
+- Implemented: MQTT-AD, added support for Climate action_template/state
 - Fixed: MQTT-AD, fix issue where brightness and RGB command topic are different
 - Changed: mDNS, hostname now lowercase
 - Changed: MQTT-AD, added support for color_temp_command_template
